added bootstrap Library

--- a/main.html
+++ b/main.html
@@ -5,9 +5,11 @@
 	<title>Easy URL Params</title>
 	<meta name="author" content="Samuel Selvanathan">
 	<link rel="stylesheet" type="text/css" href="styles.css">
+	<link rel="stylesheet" type="text/css" href="lib/bootstrap-combined.min.css">
 </head>
 <body>
 
 </body>
 <script src="lib/jquery-1.9.0.js"></script>
+<script src="lib/bootstrap.min.js"></script>
 </html>
