--- a/main.html
+++ b/main.html
@@ -4,12 +4,16 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>Easy URL Params</title>
 	<meta name="author" content="Samuel Selvanathan">
-	<link rel="stylesheet" type="text/css" href="styles.css">
 	<link rel="stylesheet" type="text/css" href="lib/bootstrap-combined.min.css">
+	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
+	<h5>Easy URL Params</h5>
+	<button type="button" class="btn btn-mini btn-info load">Load window URL</button>
+	<textarea rows="5" id="url" name="url textarea" placeholder="Paste your URL"></textarea>
 
 </body>
 <script src="lib/jquery-1.9.0.js"></script>
 <script src="lib/bootstrap.min.js"></script>
+<script src="app.js"></script>
 </html>
