error markup, basic processing

--- a/main.html
+++ b/main.html
@@ -10,6 +10,7 @@
 <body>
 	<h5>Easy URL Params</h5>
 	<button type="button" class="btn btn-mini btn-info load">Load window URL</button>
+	<div class="alert alert-error hide"></div>
 	<textarea rows="5" id="url" name="url textarea" placeholder="Paste your URL"></textarea>
 
 </body>
