--- a/extension/main.html
+++ b/extension/main.html
@@ -5,16 +5,18 @@
 	<title>Easy URL Params</title>
 	<meta name="author" content="Samuel Selvanathan">
 	<link rel="stylesheet" type="text/css" href="lib/bootstrap-combined.min.css">
-	<link rel="stylesheet" type="text/css" href="styles.css">
+	<link rel="stylesheet" type="text/css" href="style/styles.css">
 </head>
 <body>
 	<h5>Easy URL Params</h5>
-	<button type="button" class="btn btn-mini btn-info load">Load window URL</button>
 	<div class="alert alert-error hide"></div>
 	<textarea rows="5" id="url" name="url textarea" placeholder="Paste your URL"></textarea>
+	<div class="or">OR</div>
+	<button type="button" class="btn btn-mini btn-info load">Use window URL</button>
+	<button type="button" class="btn process">Process</button>
 
 </body>
 <script src="lib/jquery-1.9.0.js"></script>
 <script src="lib/bootstrap.min.js"></script>
-<script src="app.js"></script>
+<script src="application.min.js"></script>
 </html>
