added reload url  feature

--- a/extension/main.html
+++ b/extension/main.html
@@ -13,7 +13,10 @@
 	<textarea rows="5" id="url" name="url textarea" placeholder="Paste your URL"></textarea>
 	<div class="or">OR</div>
 	<button type="button" class="btn btn-mini btn-info load">Use window URL</button>
-	<button type="button" id="process" class="btn">Process</button>
+	<div class="multi">
+		<button type="button" id="process" class="btn">Process URL</button>
+		<button type="button" id="reload" class="btn">Reload Tab</button>
+	</div>
 	<table class="table table-bordered hide">
 		<thead><tr><th>Param</th><th>Value</th></tr></thead>
 		<tbody></tbody>
