--- a/extension/main.html
+++ b/extension/main.html
@@ -5,7 +5,7 @@
 	<title>Easy URL Params</title>
 	<meta name="author" content="Samuel Selvanathan">
 	<link rel="stylesheet" type="text/css" href="lib/bootstrap-combined.min.css">
-	<link rel="stylesheet" type="text/css" href="style/styles.css">
+	<link rel="stylesheet" type="text/css" href="app.css">
 </head>
 <body>
 	<h5>Easy URL Params</h5>
@@ -29,5 +29,5 @@
 </body>
 <script src="lib/jquery-1.9.0.js"></script>
 <script src="lib/bootstrap.min.js"></script>
-<script src="application.js"></script>
+<script src="app.js"></script>
 </html>
