made the host value editable

--- a/extension/main.html
+++ b/extension/main.html
@@ -18,6 +18,10 @@
 		<a class="btn invisible" id="reload" href="#"><i class="icon-refresh"></i> Reload Edited URL</a>
 	</div>
     <div id="table" class="hide">
+    	<div class="input-prepend">
+  			<span class="add-on">Host</span>
+  			<input class="span2" id="host" type="text">
+		</div>
 		<table class="table table-bordered">
 			<thead><tr><th>Param</th><th colspan="2">Value</th></tr></thead>
 			<tbody></tbody>
