moved the "use browser URL - button to the top", removed the logic that hides and shows this button conditionally, this button is now always visible

--- a/extension/main.html
+++ b/extension/main.html
@@ -9,10 +9,10 @@
 </head>
 <body>
 	<h5>Easy URL Params</h5>
+	<a id="use-browser"><i class="icon-list"></i> Use URL from browser's current-tab</a>
+	<div style="float:clear;"></div>
 	<div class="alert alert-error hide"></div>
 	<textarea rows="5" id="url" name="url textarea" placeholder="Paste your URL"></textarea>
-	<div class="or">OR</div>
-	<button type="button" id="use-browser" class="btn btn-mini btn-info">Use URL from current browser tab</button>
 	<div class="multi">
 		<a class="btn" id="process" href="#"><i class="icon-tasks"></i> Process URL</a>
 		<a class="btn invisible" id="reload" href="#"><i class="icon-refresh"></i> Reload Edited URL</a>
